Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14187,7 +14187,12 @@
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 12.215909090909092\tLoss: 278.652\n",
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 10.653409090909092\tLoss: 738.087\n",
       "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 11.576704545454545\tLoss: 241.092\n",
-      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 12.286931818181818\tLoss: 116.772\n"
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 12.286931818181818\tLoss: 116.772\n",
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 13.778409090909092\tLoss: 64.062\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 12.784090909090908\tLoss: 40.721\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 15.056818181818182\tLoss: 39.727\n",
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 14.204545454545455\tLoss: 50.927\n",
+      "Coord: [0.3 1. ]\tAcc: 14\tLoss: 68.357\r"
      ]
     }
    ],
