Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14119,7 +14119,9 @@
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 10.795454545454545\tLoss: 15.84\n",
       "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 11.434659090909092\tLoss: 15.802\n",
       "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 15.553977272727273\tLoss: 15.249\n",
-      "Coord: [-0.4  0.5]\tAcc: 24\tLoss: 14.402\r"
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 27.34375\tLoss: 11.536\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 41.76136363636363\tLoss: 7.679\n",
+      "Coord: [0.  0.5]\tAcc: 63\tLoss: 6.163\r"
      ]
     }
    ],
