Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14084,7 +14084,11 @@
       "count: 414\tCoord: [0.5 0.9]\t\tAcc: 15.340909090909092\tLoss: 34.37\n",
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 13.139204545454545\tLoss: 51.608\n",
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 13.28125\tLoss: 105.112\n",
-      "Coord: [-1.  1.]\tAcc: 8\tLoss: 493.3622\r"
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 9.090909090909092\tLoss: 501.817\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 9.588068181818182\tLoss: 218.026\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 9.517045454545455\tLoss: 118.217\n",
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 9.517045454545455\tLoss: 59.09\n",
+      "Coord: [-0.3  1. ]\tAcc: 15\tLoss: 41.133\r"
      ]
     }
    ],
