--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14121,7 +14121,9 @@
       "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 15.553977272727273\tLoss: 15.249\n",
       "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 27.34375\tLoss: 11.536\n",
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 41.76136363636363\tLoss: 7.679\n",
-      "Coord: [0.  0.5]\tAcc: 63\tLoss: 6.163\r"
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 42.04545454545455\tLoss: 7.272\n",
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 27.769886363636363\tLoss: 9.416\n",
+      "Coord: [0.4 0.5]\tAcc: 30\tLoss: 11.195\r"
      ]
     }
    ],
