Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14123,7 +14123,8 @@
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 41.76136363636363\tLoss: 7.679\n",
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 42.04545454545455\tLoss: 7.272\n",
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 27.769886363636363\tLoss: 9.416\n",
-      "Coord: [0.4 0.5]\tAcc: 30\tLoss: 11.195\r"
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 21.164772727272727\tLoss: 11.443\n",
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 17.542613636363637\tLoss: 12.962\n"
      ]
     }
    ],
