--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14088,7 +14088,10 @@
       "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 9.588068181818182\tLoss: 218.026\n",
       "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 9.517045454545455\tLoss: 118.217\n",
       "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 9.517045454545455\tLoss: 59.09\n",
-      "Coord: [-0.3  1. ]\tAcc: 15\tLoss: 41.133\r"
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 12.286931818181818\tLoss: 33.317\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 15.553977272727273\tLoss: 30.51\n",
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 16.761363636363637\tLoss: 32.306\n",
+      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 14.914772727272727\tLoss: 39.002\n"
      ]
     }
    ],
