--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14124,7 +14124,9 @@
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 42.04545454545455\tLoss: 7.272\n",
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 27.769886363636363\tLoss: 9.416\n",
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 21.164772727272727\tLoss: 11.443\n",
-      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 17.542613636363637\tLoss: 12.962\n"
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 17.542613636363637\tLoss: 12.962\n",
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 13.494318181818182\tLoss: 13.828\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 9.588068181818182\tLoss: 23.0\n"
      ]
     }
    ],
