--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14126,7 +14126,10 @@
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 21.164772727272727\tLoss: 11.443\n",
       "count: 332\tCoord: [0.7 0.5]\t\tAcc: 17.542613636363637\tLoss: 12.962\n",
       "count: 334\tCoord: [0.9 0.5]\t\tAcc: 13.494318181818182\tLoss: 13.828\n",
-      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 9.588068181818182\tLoss: 23.0\n"
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 9.588068181818182\tLoss: 23.0\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 10.866477272727273\tLoss: 18.566\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 11.71875\tLoss: 19.034\n",
+      "Coord: [-0.5  0.6]\tAcc: 14\tLoss: 21.484\r"
      ]
     }
    ],
