--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14129,7 +14129,8 @@
       "count: 336\tCoord: [-1.   0.6]\t\tAcc: 9.588068181818182\tLoss: 23.0\n",
       "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 10.866477272727273\tLoss: 18.566\n",
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 11.71875\tLoss: 19.034\n",
-      "Coord: [-0.5  0.6]\tAcc: 14\tLoss: 21.484\r"
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 17.826704545454547\tLoss: 18.01\n",
+      "Coord: [-0.3  0.6]\tAcc: 25\tLoss: 16.356\r"
      ]
     }
    ],
