Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14130,7 +14130,8 @@
       "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 10.866477272727273\tLoss: 18.566\n",
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 11.71875\tLoss: 19.034\n",
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 17.826704545454547\tLoss: 18.01\n",
-      "Coord: [-0.3  0.6]\tAcc: 25\tLoss: 16.356\r"
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 26.27840909090909\tLoss: 14.249\n",
+      "Coord: [-0.1  0.6]\tAcc: 35\tLoss: 12.043\r"
      ]
     }
    ],
