Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14131,7 +14131,9 @@
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 11.71875\tLoss: 19.034\n",
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 17.826704545454547\tLoss: 18.01\n",
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 26.27840909090909\tLoss: 14.249\n",
-      "Coord: [-0.1  0.6]\tAcc: 35\tLoss: 12.043\r"
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 29.97159090909091\tLoss: 11.858\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 25.994318181818183\tLoss: 11.511\n",
+      "Coord: [0.4 0.6]\tAcc: 18\tLoss: 13.671\r"
      ]
     }
    ],
