Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14135,7 +14135,10 @@
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 25.994318181818183\tLoss: 11.511\n",
       "count: 350\tCoord: [0.4 0.6]\t\tAcc: 18.892045454545453\tLoss: 12.885\n",
       "count: 352\tCoord: [0.6 0.6]\t\tAcc: 16.40625\tLoss: 14.248\n",
-      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 13.565340909090908\tLoss: 15.398\n"
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 13.565340909090908\tLoss: 15.398\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 11.434659090909092\tLoss: 15.898\n",
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.15625\tLoss: 23.753\n",
+      "Coord: [-0.8  0.7]\tAcc: 15\tLoss: 22.257\r"
      ]
     }
    ],
