--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13735,7 +13735,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ==== 3. Weight - Orthogonal - whole norm ===="
    ]
@@ -13747,7 +13749,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T04:25:08.289326Z",
      "start_time": "2019-05-05T04:25:04.079465Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -13834,7 +13837,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T04:25:24.341578Z",
      "start_time": "2019-05-05T04:25:19.834658Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -13862,6 +13866,7 @@
      "end_time": "2019-05-05T05:21:34.556923Z",
      "start_time": "2019-05-05T04:25:36.012182Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -14146,7 +14151,8 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T05:21:42.062157Z",
      "start_time": "2019-05-05T05:21:40.339331Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -20120,9 +20126,63 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-05-05T05:24:39.233Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "np.save('b_loss_list_3.npy', np.asarray(loss_list))\n",
+    "np.save('b_acc_list_3.npy', np.asarray(acc_list))\n",
+    "random_direction1 = []\n",
+    "random_direction2 = []\n",
+    "\n",
+    "for w in copy_of_the_weights:\n",
+    "    \n",
+    "    if w.dim() == 1: \n",
+    "        random_direction1.append(torch.zeros_like(w))\n",
+    "        random_direction2.append(torch.zeros_like(w))\n",
+    "        \n",
+    "    else:\n",
+    "        random_vector = w.clone().cpu().numpy()\n",
+    "        \n",
+    "        random_vector1 = random_vector - random_vector.mean((2,3),keepdims=True)\n",
+    "        random_vector2 = random_vector - random_vector.mean((0,1),keepdims=True)\n",
+    "        random_vector2 = np.transpose(random_vector2,(2,3,0,1))\n",
+    "        \n",
+    "        sigma1 = tf.matmul(tf.transpose(random_vector1,(0,1,3,2)),random_vector1) / random_vector1.shape[3]\n",
+    "        sigma2 = tf.matmul(tf.transpose(random_vector2,(0,1,3,2)),random_vector2) / random_vector2.shape[3]\n",
+    "\n",
+    "        s1,u1,v1 = tf.linalg.svd(sigma1,False)\n",
+    "        s2,u2,v2 = tf.linalg.svd(sigma2,False)\n",
+    "        \n",
+    "        tmp1 =  tf.matmul(u1,1/(tf.sqrt(tf.linalg.diag(s1))+1e-5))\n",
+    "        tmp1 = tmp1 @ tf.transpose(u1,(0,1,3,2))\n",
+    "        \n",
+    "        tmp2 =  tf.matmul(u2,1/(tf.sqrt(tf.linalg.diag(s2))+1e-5))\n",
+    "        tmp2 = tmp2 @ tf.transpose(u2,(0,1,3,2))\n",
+    "        \n",
+    "        random_vector1 = random_vector1 @ tf.transpose(tmp1,(0,1,3,2))\n",
+    "        random_vector2 = random_vector2 @ tf.transpose(tmp2,(0,1,3,2))\n",
+    "        random_vector2 = tf.transpose(random_vector2,(2,3,0,1))\n",
+    "        \n",
+    "        random_vector1 = torch.from_numpy(random_vector1.eval()).cuda()\n",
+    "        random_vector2 = torch.from_numpy(random_vector2.eval()).cuda()\n",
+    "\n",
+    "        w_norm  = w.view((w.shape[0],-1))  .norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm1 = random_vector1.view((random_vector1.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "        d_norm2 = random_vector2.view((random_vector2.shape[0],-1)).norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "\n",
+    "        random_vector1 = random_vector1 * (w_norm/(d_norm1.cuda()+1e-10))\n",
+    "        random_vector2 = random_vector2 * (w_norm/(d_norm2.cuda()+1e-10))  \n",
+    "        \n",
+    "        print(random_vector1.shape)\n",
+    "        print(random_vector2.shape)\n",
+    "\n",
+    "        random_direction1.append(random_vector1)\n",
+    "        random_direction2.append(random_vector2)"
+   ]
   },
   {
    "cell_type": "code",
