--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20125,13 +20125,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-05T05:24:39.233Z"
-    }
+     "end_time": "2019-05-05T05:24:44.862770Z",
+     "start_time": "2019-05-05T05:24:39.235215Z"
+    },
+    "code_folding": [
+     5
+    ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([96, 3, 3, 3])\n",
+      "torch.Size([96, 3, 3, 3])\n",
+      "torch.Size([96, 96, 3, 3])\n",
+      "torch.Size([96, 96, 3, 3])\n",
+      "torch.Size([96, 96, 3, 3])\n",
+      "torch.Size([96, 96, 3, 3])\n",
+      "torch.Size([192, 96, 3, 3])\n",
+      "torch.Size([192, 96, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 1, 1])\n",
+      "torch.Size([192, 192, 1, 1])\n",
+      "torch.Size([10, 192, 1, 1])\n",
+      "torch.Size([10, 192, 1, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "np.save('b_loss_list_3.npy', np.asarray(loss_list))\n",
     "np.save('b_acc_list_3.npy', np.asarray(acc_list))\n",
