Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14138,7 +14138,9 @@
       "count: 354\tCoord: [0.8 0.6]\t\tAcc: 13.565340909090908\tLoss: 15.398\n",
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 11.434659090909092\tLoss: 15.898\n",
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.15625\tLoss: 23.753\n",
-      "Coord: [-0.8  0.7]\tAcc: 15\tLoss: 22.257\r"
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 10.795454545454545\tLoss: 22.095\n",
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 12.855113636363637\tLoss: 22.756\n",
+      "Coord: [-0.4  0.7]\tAcc: 14\tLoss: 23.282\r"
      ]
     }
    ],
