--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14140,7 +14140,9 @@
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.15625\tLoss: 23.753\n",
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 10.795454545454545\tLoss: 22.095\n",
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 12.855113636363637\tLoss: 22.756\n",
-      "Coord: [-0.4  0.7]\tAcc: 14\tLoss: 23.282\r"
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 16.40625\tLoss: 22.165\n",
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 20.59659090909091\tLoss: 18.913\n",
+      "Coord: [0.1 0.7]\tAcc: 33\tLoss: 15.348\r"
      ]
     }
    ],
