Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14142,7 +14142,9 @@
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 12.855113636363637\tLoss: 22.756\n",
       "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 16.40625\tLoss: 22.165\n",
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 20.59659090909091\tLoss: 18.913\n",
-      "Coord: [0.1 0.7]\tAcc: 33\tLoss: 15.348\r"
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 21.306818181818183\tLoss: 16.673\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 17.96875\tLoss: 15.737\n",
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 14.488636363636363\tLoss: 16.778\n"
      ]
     }
    ],
