Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14144,7 +14144,10 @@
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 20.59659090909091\tLoss: 18.913\n",
       "count: 368\tCoord: [0.1 0.7]\t\tAcc: 21.306818181818183\tLoss: 16.673\n",
       "count: 370\tCoord: [0.3 0.7]\t\tAcc: 17.96875\tLoss: 15.737\n",
-      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 14.488636363636363\tLoss: 16.778\n"
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 14.488636363636363\tLoss: 16.778\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 14.417613636363637\tLoss: 17.15\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 11.647727272727273\tLoss: 18.367\n",
+      "Coord: [1.  0.7]\tAcc: 9\tLoss: 18.4987\r"
      ]
     }
    ],
