Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14147,7 +14147,9 @@
       "count: 372\tCoord: [0.5 0.7]\t\tAcc: 14.488636363636363\tLoss: 16.778\n",
       "count: 374\tCoord: [0.7 0.7]\t\tAcc: 14.417613636363637\tLoss: 17.15\n",
       "count: 376\tCoord: [0.9 0.7]\t\tAcc: 11.647727272727273\tLoss: 18.367\n",
-      "Coord: [1.  0.7]\tAcc: 9\tLoss: 18.4987\r"
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 9.872159090909092\tLoss: 33.234\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 11.221590909090908\tLoss: 25.459\n",
+      "Coord: [-0.7  0.8]\tAcc: 15\tLoss: 24.613\r"
      ]
     }
    ],
