--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14149,7 +14149,9 @@
       "count: 376\tCoord: [0.9 0.7]\t\tAcc: 11.647727272727273\tLoss: 18.367\n",
       "count: 378\tCoord: [-1.   0.8]\t\tAcc: 9.872159090909092\tLoss: 33.234\n",
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 11.221590909090908\tLoss: 25.459\n",
-      "Coord: [-0.7  0.8]\tAcc: 15\tLoss: 24.613\r"
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 10.014204545454545\tLoss: 26.383\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 12.215909090909092\tLoss: 28.222\n",
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 15.198863636363637\tLoss: 27.447\n"
      ]
     }
    ],
