--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20226,24 +20226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 283,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T05:27:34.291968Z",
-     "start_time": "2019-05-05T05:27:34.243097Z"
+     "end_time": "2019-05-05T05:27:42.984480Z",
+     "start_time": "2019-05-05T05:27:42.950570Z"
     },
     "code_folding": []
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Tensor' object has no attribute 'u1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-282-19aa84eb4777>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[0ms2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mu2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mv2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msvd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom_vector2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mu1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m         \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Tensor' object has no attribute 'u1'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"Svd_266:0\", shape=(96, 3, 3), dtype=float32) Tensor(\"Svd_266:1\", shape=(96, 3, 3, 3), dtype=float32) Tensor(\"Svd_266:2\", shape=(96, 3, 3, 3), dtype=float32)\n"
      ]
     }
    ],
@@ -20269,7 +20265,8 @@
     "        s1,u1,v1 = tf.linalg.svd(random_vector1,False)\n",
     "        s2,u2,v2 = tf.linalg.svd(random_vector2,False)\n",
     "        \n",
-    "        print(s1.u1,v1)\n",
+    "        te\n",
+    "        print(s1,u1,v1)\n",
     "        break\n",
     "        \n",
     "        tmp1 =  tf.matmul(u1,1/(tf.sqrt(tf.linalg.diag(s1))+1e-5))\n",
