Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14151,7 +14151,10 @@
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 11.221590909090908\tLoss: 25.459\n",
       "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 10.014204545454545\tLoss: 26.383\n",
       "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 12.215909090909092\tLoss: 28.222\n",
-      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 15.198863636363637\tLoss: 27.447\n"
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 15.198863636363637\tLoss: 27.447\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 15.056818181818182\tLoss: 24.625\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 16.335227272727273\tLoss: 20.7\n",
+      "Coord: [0.3 0.8]\tAcc: 13\tLoss: 21.462\r"
      ]
     }
    ],
