Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20265,7 +20265,7 @@
     "        s1,u1,v1 = tf.linalg.svd(random_vector1,False)\n",
     "        s2,u2,v2 = tf.linalg.svd(random_vector2,False)\n",
     "        \n",
-    "        te\n",
+    "        temp = u1 @ tf.linalg.diag(s1)[:,:,:,:1]\n",
     "        print(s1,u1,v1)\n",
     "        break\n",
     "        \n",
