Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14154,7 +14154,9 @@
       "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 15.198863636363637\tLoss: 27.447\n",
       "count: 388\tCoord: [0.  0.8]\t\tAcc: 15.056818181818182\tLoss: 24.625\n",
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 16.335227272727273\tLoss: 20.7\n",
-      "Coord: [0.3 0.8]\tAcc: 13\tLoss: 21.462\r"
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 13.636363636363637\tLoss: 20.084\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 12.997159090909092\tLoss: 20.809\n",
+      "Coord: [0.7 0.8]\tAcc: 12\tLoss: 20.401\r"
      ]
     }
    ],
