--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14156,7 +14156,9 @@
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 16.335227272727273\tLoss: 20.7\n",
       "count: 392\tCoord: [0.4 0.8]\t\tAcc: 13.636363636363637\tLoss: 20.084\n",
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 12.997159090909092\tLoss: 20.809\n",
-      "Coord: [0.7 0.8]\tAcc: 12\tLoss: 20.401\r"
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 11.434659090909092\tLoss: 20.813\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 10.511363636363637\tLoss: 21.395\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.369318181818182\tLoss: 30.8\n"
      ]
     }
    ],
