Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20226,21 +20226,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 289,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-05T05:30:38.113958Z",
-     "start_time": "2019-05-05T05:30:38.098999Z"
+     "end_time": "2019-05-05T05:30:45.263058Z",
+     "start_time": "2019-05-05T05:30:45.211199Z"
     },
     "code_folding": []
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-288-50c8b7fd8c2b>, line 22)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-288-50c8b7fd8c2b>\"\u001b[1;36m, line \u001b[1;32m22\u001b[0m\n\u001b[1;33m    temp = u1 @ tf.linalg.diag(s1)[:,:,:,:1] @ tf.transpose(v1,(0,1,3,2))[;,:,:1,:]\u001b[0m\n\u001b[1;37m                                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"matmul_980:0\", shape=(96, 3, 3, 3), dtype=float32)\n",
+      "Tensor(\"Svd_274:0\", shape=(96, 3, 3), dtype=float32) Tensor(\"Svd_274:1\", shape=(96, 3, 3, 3), dtype=float32) Tensor(\"Svd_274:2\", shape=(96, 3, 3, 3), dtype=float32)\n"
      ]
     }
    ],
@@ -20266,7 +20266,7 @@
     "        s1,u1,v1 = tf.linalg.svd(random_vector1,False)\n",
     "        s2,u2,v2 = tf.linalg.svd(random_vector2,False)\n",
     "        \n",
-    "        temp = u1 @ tf.linalg.diag(s1)[:,:,:,:1] @ tf.transpose(v1,(0,1,3,2))[;,:,:1,:]\n",
+    "        temp = u1 @ tf.linalg.diag(s1)[:,:,:,:1] @ tf.transpose(v1,(0,1,3,2))[:,:,:1,:]\n",
     "        print(temp)\n",
     "        print(s1,u1,v1)\n",
     "        break\n",
