--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14158,7 +14158,9 @@
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 12.997159090909092\tLoss: 20.809\n",
       "count: 396\tCoord: [0.8 0.8]\t\tAcc: 11.434659090909092\tLoss: 20.813\n",
       "count: 398\tCoord: [1.  0.8]\t\tAcc: 10.511363636363637\tLoss: 21.395\n",
-      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.369318181818182\tLoss: 30.8\n"
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.369318181818182\tLoss: 30.8\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 9.588068181818182\tLoss: 28.273\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 10.227272727272727\tLoss: 32.729\n"
      ]
     }
    ],
