Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14160,7 +14160,10 @@
       "count: 398\tCoord: [1.  0.8]\t\tAcc: 10.511363636363637\tLoss: 21.395\n",
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.369318181818182\tLoss: 30.8\n",
       "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 9.588068181818182\tLoss: 28.273\n",
-      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 10.227272727272727\tLoss: 32.729\n"
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 10.227272727272727\tLoss: 32.729\n",
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 11.150568181818182\tLoss: 34.792\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 12.784090909090908\tLoss: 33.366\n",
+      "Coord: [0.  0.9]\tAcc: 15\tLoss: 32.002\r"
      ]
     }
    ],
