--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14163,7 +14163,9 @@
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 10.227272727272727\tLoss: 32.729\n",
       "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 11.150568181818182\tLoss: 34.792\n",
       "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 12.784090909090908\tLoss: 33.366\n",
-      "Coord: [0.  0.9]\tAcc: 15\tLoss: 32.002\r"
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 13.068181818181818\tLoss: 27.995\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 13.565340909090908\tLoss: 24.782\n",
+      "Coord: [0.4 0.9]\tAcc: 16\tLoss: 23.833\r"
      ]
     }
    ],
