--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20266,7 +20266,9 @@
     "        s1,u1,v1 = tf.linalg.svd(random_vector1,False)\n",
     "        s2,u2,v2 = tf.linalg.svd(random_vector2,False)\n",
     "        \n",
-    "        temp = u1 @ tf.linalg.diag(s1)[:,:,:,:1] @ tf.transpose(v1,(0,1,3,2))[:,:,:1,:]\n",
+    "        random_vector1 = u1 @ tf.linalg.diag(s1)[:,:,:,:1] @ tf.transpose(v1,(0,1,3,2))[:,:,:1,:]\n",
+    "        random_vector2 = u1 @ tf.linalg.diag(s1)[:,:,:,:1] @ tf.transpose(v1,(0,1,3,2))[:,:,:1,:]\n",
+    "\n",
     "        print(temp)\n",
     "        print(s1,u1,v1)\n",
     "        break\n",
