Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14165,7 +14165,9 @@
       "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 12.784090909090908\tLoss: 33.366\n",
       "count: 410\tCoord: [0.1 0.9]\t\tAcc: 13.068181818181818\tLoss: 27.995\n",
       "count: 412\tCoord: [0.3 0.9]\t\tAcc: 13.565340909090908\tLoss: 24.782\n",
-      "Coord: [0.4 0.9]\tAcc: 16\tLoss: 23.833\r"
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 11.576704545454545\tLoss: 25.369\n",
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 11.434659090909092\tLoss: 24.635\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 11.079545454545455\tLoss: 24.994\n"
      ]
     }
    ],
