Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14167,7 +14167,9 @@
       "count: 412\tCoord: [0.3 0.9]\t\tAcc: 13.565340909090908\tLoss: 24.782\n",
       "count: 414\tCoord: [0.5 0.9]\t\tAcc: 11.576704545454545\tLoss: 25.369\n",
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 11.434659090909092\tLoss: 24.635\n",
-      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 11.079545454545455\tLoss: 24.994\n"
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 11.079545454545455\tLoss: 24.994\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 9.659090909090908\tLoss: 40.111\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 11.221590909090908\tLoss: 30.973\n"
      ]
     }
    ],
