Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20162,8 +20162,8 @@
     }
    ],
    "source": [
-    "np.save('b_loss_list_3.npy', np.asarray(loss_list))\n",
-    "np.save('b_acc_list_3.npy', np.asarray(acc_list))\n",
+    "# np.save('b_loss_list_3.npy', np.asarray(loss_list))\n",
+    "# np.save('b_acc_list_3.npy', np.asarray(acc_list))\n",
     "random_direction1 = []\n",
     "random_direction2 = []\n",
     "\n",
