Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14169,7 +14169,10 @@
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 11.434659090909092\tLoss: 24.635\n",
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 11.079545454545455\tLoss: 24.994\n",
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 9.659090909090908\tLoss: 40.111\n",
-      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 11.221590909090908\tLoss: 30.973\n"
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 11.221590909090908\tLoss: 30.973\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 10.014204545454545\tLoss: 33.921\n",
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 11.576704545454545\tLoss: 38.804\n",
+      "Coord: [-0.3  1. ]\tAcc: 18\tLoss: 37.053\r"
      ]
     }
    ],
