Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14172,7 +14172,9 @@
       "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 11.221590909090908\tLoss: 30.973\n",
       "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 10.014204545454545\tLoss: 33.921\n",
       "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 11.576704545454545\tLoss: 38.804\n",
-      "Coord: [-0.3  1. ]\tAcc: 18\tLoss: 37.053\r"
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 11.221590909090908\tLoss: 40.86\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 10.511363636363637\tLoss: 37.204\n",
+      "Coord: [0.1 1. ]\tAcc: 17\tLoss: 32.277\r"
      ]
     }
    ],
