--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20332,7 +20332,16 @@
      "start_time": "2019-05-05T05:34:39.831Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.227272727272727\tLoss: 76298.854\n",
+      "Coord: [-0.9 -1. ]\tAcc: 25\tLoss: 42147.625\r"
+     ]
+    }
+   ],
    "source": [
     "# start the evaluation\n",
     "loss_list = np.zeros((numebr_of_points,numebr_of_points)); acc_list  = np.zeros((numebr_of_points,numebr_of_points))\n",
