Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14175,7 +14175,8 @@
       "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 11.221590909090908\tLoss: 40.86\n",
       "count: 430\tCoord: [0. 1.]\t\tAcc: 10.511363636363637\tLoss: 37.204\n",
       "count: 432\tCoord: [0.2 1. ]\t\tAcc: 11.71875\tLoss: 31.308\n",
-      "Coord: [0.4 1. ]\tAcc: 13\tLoss: 31.092\r"
+      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 13.068181818181818\tLoss: 29.206\n",
+      "Coord: [0.5 1. ]\tAcc: 12\tLoss: 31.308\r"
      ]
     }
    ],
@@ -14242,11 +14243,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-05-05T05:35:47.368Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "np.save('b_loss_list_3.npy', np.asarray(loss_list))\n",
-    "np.save('b_acc_list_3.npy', np.asarray(acc_list))\n",
+    "np.save('c_loss_list_3.npy', np.asarray(loss_list))\n",
+    "np.save('c_acc_list_3.npy', np.asarray(acc_list))\n",
     "random_direction1 = []\n",
     "random_direction2 = []\n",
     "\n",
@@ -14290,7 +14295,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-05-05T05:35:47.694Z"
+    }
+   },
    "outputs": [],
    "source": [
     "viz_histogram_weights(copy_of_the_weights,random_direction1,random_direction2)"
@@ -14299,7 +14308,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-05-05T05:35:48.013Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# start the evaluation\n",
@@ -14344,7 +14357,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-05-05T05:35:48.419Z"
+    }
+   },
    "outputs": [],
    "source": [
     "create_viz(loss_list,acc_list)"
