Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20338,7 +20338,12 @@
      "output_type": "stream",
      "text": [
       "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.227272727272727\tLoss: 76298.854\n",
-      "Coord: [-0.9 -1. ]\tAcc: 25\tLoss: 42147.625\r"
+      "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 10.227272727272727\tLoss: 28423.316\n",
+      "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 9.801136363636363\tLoss: 11932.499\n",
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 9.801136363636363\tLoss: 7406.052\n",
+      "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 10.15625\tLoss: 6642.924\n",
+      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 11.363636363636363\tLoss: 6647.76\n",
+      "Coord: [ 0.1 -1. ]\tAcc: 14\tLoss: 6317.501\r"
      ]
     }
    ],
