--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20240,7 +20240,8 @@
      "text": [
       "count: 0\tCoord: [-1. -1.]\t\tAcc: 9.588068181818182\tLoss: 5064.152\n",
       "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 9.588068181818182\tLoss: 2967.705\n",
-      "Coord: [-0.7 -1. ]\tAcc: 11\tLoss: 2331.429\r"
+      "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 9.730113636363637\tLoss: 1890.778\n",
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 9.872159090909092\tLoss: 1271.891\n"
      ]
     }
    ],
