--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14176,7 +14176,8 @@
       "count: 430\tCoord: [0. 1.]\t\tAcc: 10.511363636363637\tLoss: 37.204\n",
       "count: 432\tCoord: [0.2 1. ]\t\tAcc: 11.71875\tLoss: 31.308\n",
       "count: 434\tCoord: [0.4 1. ]\t\tAcc: 13.068181818181818\tLoss: 29.206\n",
-      "Coord: [0.5 1. ]\tAcc: 12\tLoss: 31.308\r"
+      "count: 436\tCoord: [0.6 1. ]\t\tAcc: 10.085227272727273\tLoss: 30.03\n",
+      "count: 438\tCoord: [0.8 1. ]\t\tAcc: 11.576704545454545\tLoss: 28.388\n"
      ]
     }
    ],
