--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14177,7 +14177,8 @@
       "count: 432\tCoord: [0.2 1. ]\t\tAcc: 11.71875\tLoss: 31.308\n",
       "count: 434\tCoord: [0.4 1. ]\t\tAcc: 13.068181818181818\tLoss: 29.206\n",
       "count: 436\tCoord: [0.6 1. ]\t\tAcc: 10.085227272727273\tLoss: 30.03\n",
-      "count: 438\tCoord: [0.8 1. ]\t\tAcc: 11.576704545454545\tLoss: 28.388\n"
+      "count: 438\tCoord: [0.8 1. ]\t\tAcc: 11.576704545454545\tLoss: 28.388\n",
+      "Coord: [0.9 1. ]\tAcc: 14\tLoss: 29.048\r"
      ]
     }
    ],
