Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20343,7 +20343,9 @@
       "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 9.801136363636363\tLoss: 7406.052\n",
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 10.15625\tLoss: 6642.924\n",
       "count: 10\tCoord: [ 0. -1.]\t\tAcc: 11.363636363636363\tLoss: 6647.76\n",
-      "Coord: [ 0.1 -1. ]\tAcc: 14\tLoss: 6317.501\r"
+      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 10.511363636363637\tLoss: 6142.491\n",
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 9.303977272727273\tLoss: 5870.774\n",
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 8.735795454545455\tLoss: 6922.25\n"
      ]
     }
    ],
@@ -20403,9 +20405,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-05-05T05:36:42.011Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "np.save('a_loss_list_4.npy', np.asarray(loss_list))\n",
+    "np.save('a_acc_list_4.npy', np.asarray(acc_list))"
+   ]
   },
   {
    "cell_type": "code",
