--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20241,7 +20241,9 @@
       "count: 0\tCoord: [-1. -1.]\t\tAcc: 9.588068181818182\tLoss: 5064.152\n",
       "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 9.588068181818182\tLoss: 2967.705\n",
       "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 9.730113636363637\tLoss: 1890.778\n",
-      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 9.872159090909092\tLoss: 1271.891\n"
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 9.872159090909092\tLoss: 1271.891\n",
+      "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 9.588068181818182\tLoss: 878.072\n",
+      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 9.588068181818182\tLoss: 637.117\n"
      ]
     }
    ],
@@ -20301,9 +20303,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-05-05T05:36:46.440Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "np.save('b_loss_list_4.npy', np.asarray(loss_list))\n",
+    "np.save('b_acc_list_4.npy', np.asarray(acc_list))"
+   ]
   },
   {
    "cell_type": "code",
