Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20243,7 +20243,11 @@
       "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 9.730113636363637\tLoss: 1890.778\n",
       "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 9.872159090909092\tLoss: 1271.891\n",
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 9.588068181818182\tLoss: 878.072\n",
-      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 9.588068181818182\tLoss: 637.117\n"
+      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 9.588068181818182\tLoss: 637.117\n",
+      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 9.588068181818182\tLoss: 560.516\n",
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 9.730113636363637\tLoss: 655.951\n",
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 9.659090909090908\tLoss: 983.218\n",
+      "Coord: [ 0.7 -1. ]\tAcc: 9\tLoss: 1220.4916\r"
      ]
     }
    ],
