--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20311,7 +20311,17 @@
      "start_time": "2019-05-05T05:35:48.013Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.15625\tLoss: 9.523\n",
+      "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 10.014204545454545\tLoss: 9.772\n",
+      "Coord: [-0.7 -1. ]\tAcc: 14\tLoss: 10.385\r"
+     ]
+    }
+   ],
    "source": [
     "# start the evaluation\n",
     "loss_list = np.zeros((numebr_of_points,numebr_of_points)); acc_list  = np.zeros((numebr_of_points,numebr_of_points))\n",
