Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20318,7 +20318,8 @@
      "text": [
       "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.15625\tLoss: 9.523\n",
       "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 10.014204545454545\tLoss: 9.772\n",
-      "Coord: [-0.7 -1. ]\tAcc: 14\tLoss: 10.385\r"
+      "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 9.375\tLoss: 10.07\n",
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 10.15625\tLoss: 9.374\n"
      ]
     }
    ],
