Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20247,7 +20247,11 @@
       "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 9.588068181818182\tLoss: 560.516\n",
       "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 9.730113636363637\tLoss: 655.951\n",
       "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 9.659090909090908\tLoss: 983.218\n",
-      "Coord: [ 0.7 -1. ]\tAcc: 9\tLoss: 1220.4916\r"
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 9.659090909090908\tLoss: 1684.003\n",
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 9.588068181818182\tLoss: 3109.639\n",
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 9.446022727272727\tLoss: 873.242\n",
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 9.872159090909092\tLoss: 517.672\n",
+      "Coord: [-0.6 -0.9]\tAcc: 7\tLoss: 397.7687\r"
      ]
     }
    ],
