Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20345,7 +20345,15 @@
       "count: 10\tCoord: [ 0. -1.]\t\tAcc: 11.363636363636363\tLoss: 6647.76\n",
       "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 10.511363636363637\tLoss: 6142.491\n",
       "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 9.303977272727273\tLoss: 5870.774\n",
-      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 8.735795454545455\tLoss: 6922.25\n"
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 8.735795454545455\tLoss: 6922.25\n",
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 7.8125\tLoss: 10178.105\n",
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 8.309659090909092\tLoss: 17010.214\n",
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 9.872159090909092\tLoss: 12429.634\n",
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 8.948863636363637\tLoss: 5002.107\n",
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 9.232954545454545\tLoss: 2322.348\n",
+      "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 10.227272727272727\tLoss: 1805.953\n",
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 9.872159090909092\tLoss: 1665.052\n",
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 9.659090909090908\tLoss: 1520.63\n"
      ]
     }
    ],
