--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20319,7 +20319,10 @@
       "count: 0\tCoord: [-1. -1.]\t\tAcc: 10.15625\tLoss: 9.523\n",
       "count: 2\tCoord: [-0.8 -1. ]\t\tAcc: 10.014204545454545\tLoss: 9.772\n",
       "count: 4\tCoord: [-0.6 -1. ]\t\tAcc: 9.375\tLoss: 10.07\n",
-      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 10.15625\tLoss: 9.374\n"
+      "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 10.15625\tLoss: 9.374\n",
+      "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 10.15625\tLoss: 8.89\n",
+      "count: 10\tCoord: [ 0. -1.]\t\tAcc: 10.227272727272727\tLoss: 9.197\n",
+      "Coord: [ 0.1 -1. ]\tAcc: 13\tLoss: 9.796\r"
      ]
     }
    ],
