Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20322,7 +20322,9 @@
       "count: 6\tCoord: [-0.4 -1. ]\t\tAcc: 10.15625\tLoss: 9.374\n",
       "count: 8\tCoord: [-0.2 -1. ]\t\tAcc: 10.15625\tLoss: 8.89\n",
       "count: 10\tCoord: [ 0. -1.]\t\tAcc: 10.227272727272727\tLoss: 9.197\n",
-      "Coord: [ 0.1 -1. ]\tAcc: 13\tLoss: 9.796\r"
+      "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 10.014204545454545\tLoss: 9.895\n",
+      "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 9.801136363636363\tLoss: 11.018\n",
+      "Coord: [ 0.5 -1. ]\tAcc: 16\tLoss: 12.945\r"
      ]
     }
    ],
