--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20251,7 +20251,11 @@
       "count: 20\tCoord: [ 1. -1.]\t\tAcc: 9.588068181818182\tLoss: 3109.639\n",
       "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 9.446022727272727\tLoss: 873.242\n",
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 9.872159090909092\tLoss: 517.672\n",
-      "Coord: [-0.6 -0.9]\tAcc: 7\tLoss: 397.7687\r"
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 10.227272727272727\tLoss: 328.108\n",
+      "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 10.369318181818182\tLoss: 220.059\n",
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 10.298295454545455\tLoss: 161.488\n",
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 11.008522727272727\tLoss: 152.352\n",
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 10.085227272727273\tLoss: 195.064\n"
      ]
     }
    ],
