Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20324,7 +20324,9 @@
       "count: 10\tCoord: [ 0. -1.]\t\tAcc: 10.227272727272727\tLoss: 9.197\n",
       "count: 12\tCoord: [ 0.2 -1. ]\t\tAcc: 10.014204545454545\tLoss: 9.895\n",
       "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 9.801136363636363\tLoss: 11.018\n",
-      "Coord: [ 0.5 -1. ]\tAcc: 16\tLoss: 12.945\r"
+      "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 9.446022727272727\tLoss: 16.74\n",
+      "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 9.588068181818182\tLoss: 21.145\n",
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 10.014204545454545\tLoss: 21.418\n"
      ]
     }
    ],
