Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20255,7 +20255,12 @@
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 10.369318181818182\tLoss: 220.059\n",
       "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 10.298295454545455\tLoss: 161.488\n",
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 11.008522727272727\tLoss: 152.352\n",
-      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 10.085227272727273\tLoss: 195.064\n"
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 10.085227272727273\tLoss: 195.064\n",
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 9.943181818181818\tLoss: 313.688\n",
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 9.801136363636363\tLoss: 567.036\n",
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 9.659090909090908\tLoss: 1117.868\n",
+      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.227272727272727\tLoss: 258.91\n",
+      "Coord: [-0.9 -0.8]\tAcc: 9\tLoss: 193.2233\r"
      ]
     }
    ],
