Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20326,7 +20326,10 @@
       "count: 14\tCoord: [ 0.4 -1. ]\t\tAcc: 9.801136363636363\tLoss: 11.018\n",
       "count: 16\tCoord: [ 0.6 -1. ]\t\tAcc: 9.446022727272727\tLoss: 16.74\n",
       "count: 18\tCoord: [ 0.8 -1. ]\t\tAcc: 9.588068181818182\tLoss: 21.145\n",
-      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 10.014204545454545\tLoss: 21.418\n"
+      "count: 20\tCoord: [ 1. -1.]\t\tAcc: 10.014204545454545\tLoss: 21.418\n",
+      "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 10.653409090909092\tLoss: 18.62\n",
+      "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 10.795454545454545\tLoss: 16.869\n",
+      "Coord: [-0.6 -0.9]\tAcc: 17\tLoss: 16.47\r"
      ]
     }
    ],
