--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20353,7 +20353,16 @@
       "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 9.232954545454545\tLoss: 2322.348\n",
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 10.227272727272727\tLoss: 1805.953\n",
       "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 9.872159090909092\tLoss: 1665.052\n",
-      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 9.659090909090908\tLoss: 1520.63\n"
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 9.659090909090908\tLoss: 1520.63\n",
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 9.375\tLoss: 1511.375\n",
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 8.877840909090908\tLoss: 1914.738\n",
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 7.954545454545454\tLoss: 3221.008\n",
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 8.877840909090908\tLoss: 6334.615\n",
+      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 8.948863636363637\tLoss: 4504.083\n",
+      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 8.380681818181818\tLoss: 1823.491\n",
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 8.877840909090908\tLoss: 806.285\n",
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 10.440340909090908\tLoss: 419.717\n",
+      "Coord: [-0.3 -0.8]\tAcc: 17\tLoss: 350.801\r"
      ]
     }
    ],
