Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20260,7 +20260,11 @@
       "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 9.801136363636363\tLoss: 567.036\n",
       "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 9.659090909090908\tLoss: 1117.868\n",
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.227272727272727\tLoss: 258.91\n",
-      "Coord: [-0.9 -0.8]\tAcc: 9\tLoss: 193.2233\r"
+      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 10.014204545454545\tLoss: 145.117\n",
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 10.866477272727273\tLoss: 98.201\n",
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 11.221590909090908\tLoss: 72.877\n",
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 11.292613636363637\tLoss: 52.949\n",
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 10.795454545454545\tLoss: 51.396\n"
      ]
     }
    ],
