--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20329,7 +20329,9 @@
       "count: 20\tCoord: [ 1. -1.]\t\tAcc: 10.014204545454545\tLoss: 21.418\n",
       "count: 22\tCoord: [-0.9 -0.9]\t\tAcc: 10.653409090909092\tLoss: 18.62\n",
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 10.795454545454545\tLoss: 16.869\n",
-      "Coord: [-0.6 -0.9]\tAcc: 17\tLoss: 16.47\r"
+      "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 10.582386363636363\tLoss: 15.169\n",
+      "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 11.008522727272727\tLoss: 13.846\n",
+      "Coord: [-0.2 -0.9]\tAcc: 14\tLoss: 14.062\r"
      ]
     }
    ],
