Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20362,7 +20362,13 @@
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 8.380681818181818\tLoss: 1823.491\n",
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 8.877840909090908\tLoss: 806.285\n",
       "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 10.440340909090908\tLoss: 419.717\n",
-      "Coord: [-0.3 -0.8]\tAcc: 17\tLoss: 350.801\r"
+      "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 10.582386363636363\tLoss: 320.008\n",
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 10.369318181818182\tLoss: 241.272\n",
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 11.292613636363637\tLoss: 253.326\n",
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 7.528409090909091\tLoss: 393.37\n",
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 7.8125\tLoss: 941.477\n",
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 9.303977272727273\tLoss: 2423.759\n",
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 10.085227272727273\tLoss: 6026.347\n"
      ]
     }
    ],
