--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20331,7 +20331,9 @@
       "count: 24\tCoord: [-0.7 -0.9]\t\tAcc: 10.795454545454545\tLoss: 16.869\n",
       "count: 26\tCoord: [-0.5 -0.9]\t\tAcc: 10.582386363636363\tLoss: 15.169\n",
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 11.008522727272727\tLoss: 13.846\n",
-      "Coord: [-0.2 -0.9]\tAcc: 14\tLoss: 14.062\r"
+      "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 11.647727272727273\tLoss: 13.3\n",
+      "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 12.713068181818182\tLoss: 12.781\n",
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 9.446022727272727\tLoss: 17.829\n"
      ]
     }
    ],
