--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20264,7 +20264,13 @@
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 10.866477272727273\tLoss: 98.201\n",
       "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 11.221590909090908\tLoss: 72.877\n",
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 11.292613636363637\tLoss: 52.949\n",
-      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 10.795454545454545\tLoss: 51.396\n"
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 10.795454545454545\tLoss: 51.396\n",
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 11.150568181818182\tLoss: 61.205\n",
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 12.073863636363637\tLoss: 96.784\n",
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 11.079545454545455\tLoss: 188.101\n",
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 11.363636363636363\tLoss: 404.769\n",
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 11.008522727272727\tLoss: 892.122\n",
+      "Coord: [-0.9 -0.7]\tAcc: 15\tLoss: 48.134\r"
      ]
     }
    ],
