--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20333,7 +20333,10 @@
       "count: 28\tCoord: [-0.3 -0.9]\t\tAcc: 11.008522727272727\tLoss: 13.846\n",
       "count: 30\tCoord: [-0.1 -0.9]\t\tAcc: 11.647727272727273\tLoss: 13.3\n",
       "count: 32\tCoord: [ 0.1 -0.9]\t\tAcc: 12.713068181818182\tLoss: 12.781\n",
-      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 9.446022727272727\tLoss: 17.829\n"
+      "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 9.446022727272727\tLoss: 17.829\n",
+      "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 10.15625\tLoss: 26.085\n",
+      "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 10.085227272727273\tLoss: 27.978\n",
+      "Coord: [ 0.8 -0.9]\tAcc: 10\tLoss: 26.096\r"
      ]
     }
    ],
