--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20336,7 +20336,9 @@
       "count: 34\tCoord: [ 0.3 -0.9]\t\tAcc: 9.446022727272727\tLoss: 17.829\n",
       "count: 36\tCoord: [ 0.5 -0.9]\t\tAcc: 10.15625\tLoss: 26.085\n",
       "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 10.085227272727273\tLoss: 27.978\n",
-      "Coord: [ 0.8 -0.9]\tAcc: 10\tLoss: 26.096\r"
+      "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 10.227272727272727\tLoss: 25.775\n",
+      "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.866477272727273\tLoss: 36.136\n",
+      "Coord: [-0.9 -0.8]\tAcc: 16\tLoss: 32.431\r"
      ]
     }
    ],
