Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20270,7 +20270,11 @@
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 11.079545454545455\tLoss: 188.101\n",
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 11.363636363636363\tLoss: 404.769\n",
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 11.008522727272727\tLoss: 892.122\n",
-      "Coord: [-0.9 -0.7]\tAcc: 15\tLoss: 48.134\r"
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 10.085227272727273\tLoss: 49.963\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 9.659090909090908\tLoss: 43.162\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 9.303977272727273\tLoss: 36.586\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 8.877840909090908\tLoss: 29.601\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 7.7414772727272725\tLoss: 27.237\n"
      ]
     }
    ],
