Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20368,7 +20368,15 @@
       "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 7.528409090909091\tLoss: 393.37\n",
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 7.8125\tLoss: 941.477\n",
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 9.303977272727273\tLoss: 2423.759\n",
-      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 10.085227272727273\tLoss: 6026.347\n"
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 10.085227272727273\tLoss: 6026.347\n",
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 7.8835227272727275\tLoss: 557.901\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 9.090909090909092\tLoss: 240.388\n",
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 12.855113636363637\tLoss: 117.909\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 15.340909090909092\tLoss: 75.088\n",
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 12.571022727272727\tLoss: 73.153\n",
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 11.292613636363637\tLoss: 75.487\n",
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 10.227272727272727\tLoss: 111.627\n",
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 8.522727272727273\tLoss: 303.379\n"
      ]
     }
    ],
