--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20338,7 +20338,9 @@
       "count: 38\tCoord: [ 0.7 -0.9]\t\tAcc: 10.085227272727273\tLoss: 27.978\n",
       "count: 40\tCoord: [ 0.9 -0.9]\t\tAcc: 10.227272727272727\tLoss: 25.775\n",
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.866477272727273\tLoss: 36.136\n",
-      "Coord: [-0.9 -0.8]\tAcc: 16\tLoss: 32.431\r"
+      "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 10.298295454545455\tLoss: 28.964\n",
+      "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 10.15625\tLoss: 23.936\n",
+      "Coord: [-0.5 -0.8]\tAcc: 15\tLoss: 21.285\r"
      ]
     }
    ],
