Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20340,7 +20340,8 @@
       "count: 42\tCoord: [-1.  -0.8]\t\tAcc: 10.866477272727273\tLoss: 36.136\n",
       "count: 44\tCoord: [-0.8 -0.8]\t\tAcc: 10.298295454545455\tLoss: 28.964\n",
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 10.15625\tLoss: 23.936\n",
-      "Coord: [-0.5 -0.8]\tAcc: 15\tLoss: 21.285\r"
+      "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 12.073863636363637\tLoss: 20.57\n",
+      "Coord: [-0.2 -0.8]\tAcc: 23\tLoss: 20.659\r"
      ]
     }
    ],
