Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20231,7 +20231,8 @@
    "metadata": {
     "ExecuteTime": {
      "start_time": "2019-05-05T05:35:09.531Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -20274,7 +20275,11 @@
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 9.659090909090908\tLoss: 43.162\n",
       "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 9.303977272727273\tLoss: 36.586\n",
       "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 8.877840909090908\tLoss: 29.601\n",
-      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 7.7414772727272725\tLoss: 27.237\n"
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 7.7414772727272725\tLoss: 27.237\n",
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 8.877840909090908\tLoss: 28.937\n",
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 10.795454545454545\tLoss: 38.589\n",
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 10.866477272727273\tLoss: 76.557\n",
+      "Coord: [ 0.6 -0.7]\tAcc: 12\tLoss: 107.649\r"
      ]
     }
    ],
