Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20343,7 +20343,9 @@
       "count: 46\tCoord: [-0.6 -0.8]\t\tAcc: 10.15625\tLoss: 23.936\n",
       "count: 48\tCoord: [-0.4 -0.8]\t\tAcc: 12.073863636363637\tLoss: 20.57\n",
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 12.784090909090908\tLoss: 19.628\n",
-      "Coord: [-0.1 -0.8]\tAcc: 16\tLoss: 20.048\r"
+      "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 10.227272727272727\tLoss: 22.841\n",
+      "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 10.15625\tLoss: 35.615\n",
+      "Coord: [ 0.3 -0.8]\tAcc: 25\tLoss: 34.822\r"
      ]
     }
    ],
