Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20279,7 +20279,11 @@
       "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 8.877840909090908\tLoss: 28.937\n",
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 10.795454545454545\tLoss: 38.589\n",
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 10.866477272727273\tLoss: 76.557\n",
-      "Coord: [ 0.6 -0.7]\tAcc: 12\tLoss: 107.649\r"
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 11.008522727272727\tLoss: 174.503\n",
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.795454545454545\tLoss: 425.46\n",
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 12.002840909090908\tLoss: 25.355\n",
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 11.434659090909092\tLoss: 28.501\n",
+      "Coord: [-0.7 -0.6]\tAcc: 14\tLoss: 30.651\r"
      ]
     }
    ],
