Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20330,7 +20330,8 @@
    "metadata": {
     "ExecuteTime": {
      "start_time": "2019-05-05T05:34:39.831Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -20376,7 +20377,15 @@
       "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 12.571022727272727\tLoss: 73.153\n",
       "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 11.292613636363637\tLoss: 75.487\n",
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 10.227272727272727\tLoss: 111.627\n",
-      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 8.522727272727273\tLoss: 303.379\n"
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 8.522727272727273\tLoss: 303.379\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 10.085227272727273\tLoss: 1020.371\n",
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.227272727272727\tLoss: 3121.76\n",
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 10.511363636363637\tLoss: 171.362\n",
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 11.221590909090908\tLoss: 97.124\n",
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 13.778409090909092\tLoss: 61.28\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 14.630681818181818\tLoss: 49.42\n",
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 11.789772727272727\tLoss: 51.36\n",
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 10.653409090909092\tLoss: 46.863\n"
      ]
     }
    ],
