--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20345,7 +20345,9 @@
       "count: 50\tCoord: [-0.2 -0.8]\t\tAcc: 12.784090909090908\tLoss: 19.628\n",
       "count: 52\tCoord: [ 0.  -0.8]\t\tAcc: 10.227272727272727\tLoss: 22.841\n",
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 10.15625\tLoss: 35.615\n",
-      "Coord: [ 0.3 -0.8]\tAcc: 25\tLoss: 34.822\r"
+      "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 10.369318181818182\tLoss: 39.346\n",
+      "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 10.227272727272727\tLoss: 36.405\n",
+      "Coord: [ 0.7 -0.8]\tAcc: 24\tLoss: 29.903\r"
      ]
     }
    ],
