Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20283,7 +20283,11 @@
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.795454545454545\tLoss: 425.46\n",
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 12.002840909090908\tLoss: 25.355\n",
       "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 11.434659090909092\tLoss: 28.501\n",
-      "Coord: [-0.7 -0.6]\tAcc: 14\tLoss: 30.651\r"
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 12.571022727272727\tLoss: 29.87\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 10.582386363636363\tLoss: 24.718\n",
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 9.446022727272727\tLoss: 23.727\n",
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 8.451704545454545\tLoss: 18.638\n",
+      "Coord: [ 0.1 -0.6]\tAcc: 14\tLoss: 17.075\r"
      ]
     }
    ],
