--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20347,7 +20347,9 @@
       "count: 54\tCoord: [ 0.2 -0.8]\t\tAcc: 10.15625\tLoss: 35.615\n",
       "count: 56\tCoord: [ 0.4 -0.8]\t\tAcc: 10.369318181818182\tLoss: 39.346\n",
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 10.227272727272727\tLoss: 36.405\n",
-      "Coord: [ 0.7 -0.8]\tAcc: 24\tLoss: 29.903\r"
+      "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 10.298295454545455\tLoss: 30.981\n",
+      "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 9.801136363636363\tLoss: 25.666\n",
+      "Coord: [-1.  -0.7]\tAcc: 11\tLoss: 49.986\r"
      ]
     }
    ],
